services title aligned correctly;

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(203, 201, 201, 0.25);
   gap: 21rem;
- }
+}
 .menu {
   display: flex;
   gap: 50px;
@@ -67,8 +67,8 @@ body {
   box-sizing: border-box;
   display: flex;
   padding: 0.8rem 0.7rem;
- font-size: 1rem;
- background: #304bab;
+  font-size: 1rem;
+  background: #304bab;
 }
 .cocreatewithus {
   color: #fff;
@@ -180,24 +180,25 @@ img.bluearrow {
   display: flex;
   gap: 0.05rem;
 }
-.bluebox{
-display: inline-flex;
-padding: 14rem 32rem;
-flex-direction: column;
-align-items: center;
-gap: 3.0625rem;
-border-radius: 0rem 4.375rem 4.375rem 0rem;
-background: #304BAB;
-margin-top: 5rem;
+.bluebox {
+  display: inline-flex;
+  /* padding: 14rem 32rem; */
+  height: 30rem;
+  width: 90vw;
+  /* align-items: center;     */
+  /* gap: 3.0625rem; */
+  border-radius: 0rem 4.375rem 4.375rem 0rem;
+  background: #304bab;
+  margin-top: 5rem;
 }
-.ourservices{
-color: #FFF;
-font-family: Raleway;
-font-size: 2rem;
-font-style: normal;
-font-weight: 800;
-line-height:normal;
-text-align: center;
-
-
+.ourservices {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
 }
